src/test/run-pass/vec-late-init.rs
fn main() {
  let vec[int] later;
  if (true) {
    later = vec(1);
  } else {
    later = vec(2);
  }
  log later.(0);
}